# ticket-rs

./: Cargo.toml
src/: db.rs  main.rs  routes.rs
templates/: index.html
