[package]
name = "ticket-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
askama = "0.14.0"
axum = "0.8.3"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.2"
uuid = { version = "1.16.0", features = ["v4"] }
